# FastAPI_2.0

./: README.md  crud.py  items_views.py  main.py  pyproject.toml  queries.sql  requirements.txt
alembic/versions/: 3606efb5b7e7_create_users_table.py  51dc22c1abdd_create_products_table.py  568d175f4644_create_profile_table.py  7366d1cdb61d_update_profile_table.py  9d27db125c13_create_products_table.py  9dc556691e9c_create_users_table.py  a1fea86e6ca7_create_products_table.py  acb4ed3548a7_create_posts_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  shemas.py  views.py
core/models/: __init__.py  db_helper.py  mixin.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
